--- a/ASPTest/ASPTest.csproj
+++ b/ASPTest/ASPTest.csproj
@@ -19,6 +19,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -132,7 +134,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BL\DataRepository.cs" />
+    <Compile Include="BL\MyCache.cs" />
+    <Compile Include="Common\Consts.cs" />
+    <Compile Include="Common\Extentions.cs" />
+    <Compile Include="Controllers\BackofficeController.cs" />
     <Compile Include="Controllers\CalcController.cs" />
+    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="BL\EventsRepository.cs" />
     <Compile Include="DAL\Lookup.cs" />
@@ -150,6 +157,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include=".editorconfig" />
     <Content Include=".htaccess" />
+    <Content Include="Views\Backoffice\Data.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
