--- a/ASPTest/ASPTest.csproj
+++ b/ASPTest/ASPTest.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -132,6 +133,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BL\DataRepository.cs" />
+    <Compile Include="Controllers\BackofficeController.cs" />
     <Compile Include="Controllers\CalcController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="BL\EventsRepository.cs" />
@@ -150,6 +152,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include=".editorconfig" />
     <Content Include=".htaccess" />
+    <Content Include="Views\Backoffice\Accroding.cshtml" />
+    <Content Include="Views\Backoffice\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
